--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	  "mongoose": "3.6.x",
 	  "winston": "0.7.2",
 	  "moment": "2.6.0",
+	  "morgan": "^1.7.0",
         "moment-timezone": "0.5.3"
 	},
 	"devDependencies": {
