--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	  "underscore": "1.4.x",
 	  "passport": "0.1.x",
 	  "passport-google-oauth": "0.1.x",
-	  "mongoose": "3.8.23",
+	  "mongoose": "4.3.x",
 	  "winston": "0.7.2",
 	  "moment": "2.6.0",
 	  "morgan": "^1.7.0",
